@@ -1,4 +1,5 @@
 2.2.9
+ * cqlsh copy-from: encode column names to avoid primary key parsing errors when prepared statements are not used (CASSANDRA-12909)
  * Temporarily fix bug that creates commit log when running offline tools (CASSANDRA-8616)
  * Reduce granuality of OpOrder.Group during index build (CASSANDRA-12796)
  * Test bind parameters and unset parameters in InsertUpdateIfConditionTest (CASSANDRA-12980)
